--- a/reg site/index.html
+++ b/reg site/index.html
@@ -64,7 +64,7 @@
             <div class="container">
                 <div class="footer__inner">
                     <div class="footer__text">
-                        <h3>tg: tenbullets</h3>
+                        <h3>tg: zhertvapropagandynolana</h3>
                     </div>
                 </div>
             </div>
