--- a/rawsite/src/main/webapp/html/aut.html
+++ b/rawsite/src/main/webapp/html/aut.html
@@ -26,7 +26,7 @@
             <div class="basic__inner">
                 
                 <div class="block__3">
-                    <form action="aut" method="POST">
+                    <form action="aut" method="GET">
                         <h4 class="block__text">Authorization</h4>
 
                         <label for="username">Username</label>
